# Apex-Capital-Portfolio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/rates/: rates.json
artifacts/snapshots/: 069500_KS.csv  AGG.csv  EEM.csv  EFA.csv  GLD.csv  IEF.csv  QQQ.csv  SHY.csv  SPY.csv  TLT.csv  manifest.json
docs/: 00-INDEX.md  01-requirements.md  02-etf-universe.md  03-investor-survey.md  04-ips-template.md  05-risk-metrics.md  06-architecture.md  07-asset-classes.md  08-dev-plan.md  09-cs-runbook.md  10-v2-pipeline-design.md  11-direction.md  12-knowledge-graph-compliance.md  13-v3-design.md
examples/: answers.sample.json  survey.html
src/apex/: __init__.py  advisory.py  cli.py  (+24 more)
tests/: conftest.py  test_adjust.py  test_advisory.py  test_black_litterman.py  test_cma.py  test_contracts_spi.py  test_delisting_returns.py  test_determinism_boundary.py  test_factledger.py  test_forward_binding.py  test_fundamentals_pit.py  test_golden.py  test_graph.py  test_holdings.py  test_ledger.py  test_loader.py  test_lookthrough.py  test_membership.py  test_membership_crosscheck.py  test_membership_pit.py  test_narrator_llm.py  test_optimizer.py  test_property.py  test_rates.py  test_registry.py  test_report.py  test_reproducibility.py  test_result_hash_separation.py  test_schemas.py  test_serving.py  test_signal_calibration.py  test_signal_overlay.py  test_skeleton.py  test_stock_backtest.py  test_stock_cma.py  test_stock_optimizer.py  test_stock_pipeline.py  test_structural_compliance.py  test_universe_integrity.py  test_validation.py  (+1 more)
(+40 files in other folders)
